--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,30 @@
 /__pycache__
 .idea/CCPSO2.iml
 .idea/misc.xml
+.idea/CCPSO2.iml
+.idea/CCPSO2.iml
+X_result.csv
+results_f8.csv
+results_f6.csv
+results_f4.csv
+results_f3.csv
+results_f2.csv
+results_f1.csv
+results/X_result_fun8.csv
+results/X_result_fun6.csv
+results/X_result_fun4.csv
+results/X_result_fun3.csv
+results/X_result_fun2.csv
+results/X_result_fun1.csv
+results/CCPSO2_gbest_history_fun8.csv
+results/CCPSO2_gbest_history_fun6.csv
+results/CCPSO2_gbest_history_fun4.csv
+results/CCPSO2_gbest_history_fun3.csv
+results/CCPSO2_gbest_history_fun2.csv
+results/CCPSO2_gbest_history_fun1.csv
+.idea/other.xml
+.idea/misc.xml
+.idea/CCPSO2.iml
+.idea/other.xml
+.idea/misc.xml
+.idea/CCPSO2.iml
